# OCI-Defense-Demo

./: .env.example  .gitignore  CLAUDE.md  README.md
.agents/: cesium-layer-builder.md  chat-tool-author.md  compliance-auditor.md  demo-flow-curator.md  pgql-schema-architect.md  sovereign-proxy-builder.md
crossplane/: auth-setup.md
docs/: ARCHITECTURE.md  ECOSYSTEM.md  RUNBOOK.md  api-overview.md  claude-md-diff.md  cloud-guard-iam.md  compliance-architecture.md  security-controls-matrix.md  security-zone-overview.md  skills-roadmap.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
industrial/: README.md
integration-plan/: CLAUDE-md-additions.md  INTEGRATION-GUIDE.md  QUICK-REFERENCE.md  bootstrap-industrial.sh  composition-agent-factory.yaml.tmpl  verify-coalition-vpd.sh
scripts/: activate-cloud-guard.sh  apply-migration.sh  bootstrap-industrial.sh  create-security-zone.sh  dump-openapi.sh  load-mictronics-aircraft.sh  seed-vessels.sh  setup-devops.sh  (+12 more)
services/ais-multiplexer/: .env.example  .env.example.maritime-additions  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
services/ais-multiplexer/app/: __init__.py  audit.py  db.py  main.py  multiplexer.py  settings.py  upstream.py  vault.py
services/ais-multiplexer/tests/: conftest.py  test_audit_batcher.py  test_lifespan_errors.py  test_main.py  test_multiplexer.py  test_settings.py  test_upstream.py  test_vault.py
(+453 files in other folders)
